--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>ES6 Project Seed</title>
+    <title>cornerStone ES6</title>
     <meta charset='utf-8'>
 
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
