--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
 
   <body>
 
-    <img src="images/logo.png" alt="logo">
+    <img class="main__logo" src="images/logo.png" alt="logo">
 
     <script src='index.js'></script>
 
