--- a/static/index.html
+++ b/static/index.html
@@ -15,12 +15,15 @@
 
     <!-- Include some big libs as global, this one having issues with Rollup -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+    <script src="https://unpkg.com/vue@2.1.10/dist/vue.js"></script>
 
   </head>
 
   <body>
 
-    <img class="main__logo" src="images/logo.png" alt="logo">
+    <!-- <div id="greeting">{{message}}</div> -->
+    <!-- <div id="test"></div> -->
+    <div id="app"></div>
 
     <script src='index.js'></script>
 
