tweaks out build process n stuff

--- a/static/index.html
+++ b/static/index.html
@@ -1,28 +1,57 @@
 <!doctype html>
 <html>
-  <head>
-    <title>cornerStone ES6</title>
-    <meta charset='utf-8'>
+<head>
 
-    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-    <meta name="description" content="Simple project startup seed with ES6" />
+  <title>Site Title</title>
+  <meta charset="utf-8">
 
-    <!-- Google Fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
+  <!-- <link rel="preload" as="image" href="images/best-cover-ever-hero-desktop@2x.jpg" media="(orientation: landscape), (min-width: 1025px)">
+  <link rel="preload" as="image" href="images/best-cover-ever-hero-mobile@2x.jpg" media="(orientation: portrait) and (max-width: 1024px)"> -->
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" crossorigin="anonymous">
+  <link rel="preload" as="style" href="styles/normalize.min.css">
+  <link rel="preload" as="style" href="index.css">
+  <link rel="preload" as="script" href="scripts/tweenmax.js">
+  <link rel="preload" as="script" href="scripts/tweenmax-scrollto.min.js">
+  <link rel="preload" as="script" href="index.js">
 
-    <!-- Stylesheets -->
-    <link rel='stylesheet' href='index.css'>
+  <meta name="description" content="Site description.">
 
-    <!-- Include some big libs as global, this one having issues with Rollup -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+  <meta name="twitter:card" value="summary">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@twitterHandle">
+  <meta name="twitter:title" content="Title">
+  <meta name="twitter:description" content="twitter description">
+  <meta name="twitter:creator" content="@creator">
+  <meta name="twitter:image:src" content="https://site-url.com/images/twitterImage.jpg">
 
-  </head>
+  <meta property="og:title" content="Title">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://site-url.com/">
+  <meta property="og:image" content="https://site-url.com/images/FacebookImage.jpg">
+  <meta property="og:description" content="facebook description">
+  <meta property="og:site_name" content="Site Name">
 
-  <body>
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0">
 
-    <img class="main__logo" src="images/logo.png" alt="logo">
+  <link rel="icon" type="image/png" href="icons/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="icons/favicon-32x32.png" sizes="32x32">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="icons/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="icons/apple-touch-icon-152x152.png">
 
-    <script src='index.js'></script>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 
-  </body>
+  <link rel="stylesheet" href="styles/normalize.min.css">
+  <link rel="stylesheet" href="index.css">
+
+  <script src="scripts/tweenmax.js"></script>
+  <script src="scripts/tweenmax-scrollto.min.js"></script>
+
+</head>
+<body>
+
+  <img class="main__logo" src="images/logo.png" alt="logo">
+
+  <script src='index.js'></script>
+
+</body>
 </html>
