--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>Site Title</title>
+  <title>cornerStone ES6</title>
   <meta charset="utf-8">
 
   <!-- <link rel="preload" as="image" href="images/best-cover-ever-hero-desktop@2x.jpg" media="(orientation: landscape), (min-width: 1025px)">
