--- a/static/index.html
+++ b/static/index.html
@@ -49,6 +49,10 @@
 
   <img class="main__logo" src="images/logo.png" alt="logo">
 
+  <div id='ui'></div>
+
+  <div id="home"></div>
+
   <script src='index.js'></script>
 
 </body>
